@@ -1,5 +1,11 @@
 2002-01-06  Sam Steingold  <sds@gnu.org>
 
+	* compiler.lisp (note-function-used, c-report-problems): report
+	the replacements for the deprecated functions
+	* deprecated.lisp (deprecate): new function - use throughout
+
+2002-01-06  Sam Steingold  <sds@gnu.org>
+
 	* makemake.in (RM) [win32]: prepend '-'
 	* ffcall/Makefile.msvc: prepend '-' before 'del'
 	* ffcall/avcall/Makefile.msvc: ditto
